@@ -86,6 +86,7 @@ use_ok ('Movie::Info');
 use_ok ('Ogg::Vorbis::Header');
 use_ok ('POSIX');
 use_ok ('Proc::ProcessTable');
+use_ok ('SOAP::Lite');
 use_ok ('Socket');
 use_ok ('Sys::Hostname');
 use_ok ('Sys::Syslog');
@@ -213,6 +214,8 @@ use_ok ('PDLNA::HTTPServer');
 use_ok ('PDLNA::HTTPXML');
 use_ok ('PDLNA::Log');
 use_ok ('PDLNA::Media');
+use_ok ('PDLNA::SOAPClient');
+use_ok ('PDLNA::SOAPMessages');
 use_ok ('PDLNA::SpecificViews');
 use_ok ('PDLNA::SSDP');
 use_ok ('PDLNA::Statistics');
