@@ -13,6 +13,12 @@
 # if not specified, it will be enabled
 Check4Updates   On
 
+# Check4UpdatesNotification
+# specify if pDLNA should send a message to a connected
+# urn:samsung.com:serviceId:MessageBoxService if a new
+# version of pDLNA is available
+Check4UpdatesNotification	On
+
 # EnableGeneralStatistics
 # specify if pDLNA should store statistics about the running pDLNA installation
 #  - memory usage
@@ -187,7 +193,9 @@ PIDFile			/var/run/pdlna.pid
 #  library - 		log the messages from building the media library
 #  httpgeneric -	log generic HTTP messages
 #  database -		log database messages
-LogCategory		discovery,httpdir,httpstream,library,httpgeneric,database
+#  transcoding -	log transcoding messages
+#  soap - 			log SOAP messages
+LogCategory		discovery,httpdir,httpstream,library,httpgeneric,database,transcoding,soap
 
 # DateFormat
 # specify the date's format
