@@ -15,6 +15,9 @@ xx-xx-2013
 - added code to remove newly added ExcludeDirs and ExcludeItems from ContentLibrary
 - added execution time to SQL query logging
 - added configuration option EnableGeneralStatistics and code to gather statistics (memory usage, media items) every minute and added graphs in WebUI for the EnableGeneralStatistics configuration parameter
+- modified Check4Updates LogCategory to default, since LogCategory update was not available at all
+- fixed a bug regarding UPnP Services, where only one service is available (PDLNA::Devices)
+- FunFeature: added configuration option Check4UpdatesNotification: a message to a connected urn:samsung.com:serviceId:MessageBoxService service will be sent if a new version of pDLNA is available (if Check4Updates is enabled)
 
 Version 0.61.0
 07-03-2013
